--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3"
 services:
   web:
     # replace username/repo:tag with your name and image details
-    image: username/repo:tag
+    image: arielrolfo/docker-training:v1
     deploy:
-      replicas: 5
+      replicas: 3
       resources:
         limits:
           cpus: "0.1"
